public/styles/styles.css
@font-face {
  font-family: "Gilroy-Bold";
  src: url("/fonts/Gilroy-Bold.ttf") format("truetype");
}

@font-face {
  font-family: "Gilroy-Heavy";
  src: url("/fonts/Gilroy-Heavy.ttf") format("truetype");
}

@font-face {
  font-family: "Gilroy-Light";
  src: url("/fonts/Gilroy-Light.ttf") format("truetype");
}

@font-face {
  font-family: "Gilroy-Medium";
  src: url("/fonts/Gilroy-Medium.ttf") format("truetype");
}

@font-face {
  font-family: "Gilroy-Regular";
  src: url("/fonts/Gilroy-Regular.ttf") format("truetype");
}

:root {
  --background-color: #f6f6f6;
  --text-color: black;

  --primary-color: rgb(83, 208, 158);
  --primary-muted-color: hsl(135, 70%, 92%);

  --header-bg-color: #ffffff;
  --header-text-color: var(--primary-color);

  --note-bg-color: #fff;
  --note-shadow-color: #ccc;

  --create-note-bg-color: #f8f8f8;
  --create-note-shadow-color: rgb(138, 137, 137);

  --light-gray: hsl(227, 20%, 44%);
  --dark-gray: hsl(227, 20%, 19%);

  --badge-color: #000000;
  --badge-bg-color: #e7e7e9;

  --font-size-normal: 16px;

  --note-color: var(--dark-gray);
  --editor-input-bg-color: hsl(0, 0%, 96%);
}

[data-theme="dark"] {
  --background-color: #191a1f;
  --text-color: #f5f5f5;

  --header-bg-color: #262a35;

  --note-bg-color: #262a35;
  --note-shadow-color: #000;

  --create-note-bg-color: #191a1f;
  --create-note-shadow-color: #000;

  --badge-color: #fff;
  --badge-bg-color: #667485;
  --note-color: var(--light-gray);

  --editor-input-bg-color: hsl(224, 16%, 16%);
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  transition: background-color 0.25s, color 0.25s, box-shadow 0.25s;
}

html {
  /* font-family: "Montserrat", Arial, sans-serif;
   */

  font-family: "Gilroy-Regular", Arial, sans-serif;
}
h1 {
  font-family: "Gilroy-Bold", Arial, sans-serif;
}

p {
  font-family: "Gilroy-Regular", Arial, sans-serif;
}

body {
  min-width: 300px;
  background-color: var(--background-color);
  color: var(--text-color);
  padding: 0px;
  /* background-image: url("https://www.transparenttextures.com/patterns/cubes.png"); */
  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
}

.page-body {
  padding: 0px 16px;
}
.organica-title {
  color: var(--primary-color);
  font-family: "Gilroy-Regular", Arial, sans-serif;
  font-weight: 200;
  flex-grow: 1;
}
.register-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.dark-mode-button {
  background: none;
  border: none;
  cursor: pointer;
  color: var(--header-text-color);
  font-size: 1.5rem;
  outline: none;
}

.dark-mode-button svg {
  vertical-align: middle;
}
.custom-hyperlink {
  width: 100%;
  text-align: right;
  padding: 5px;
}

.custom-hyperlink a {
  color: var(--primary-color);
}

.sort-controls {
  margin: 10px 0px;
}

#sort-dropdown {
  margin: 0px 10px;
}

footer {
  padding-top: 20px;
  text-align: center;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

footer p {
  color: var(--footer-text-color);
}

form.create-note {
  position: relative;
  width: 480px;
  margin: 30px auto 20px auto;
  background: var(--create-note-bg-color);
  padding: 15px;
  border-radius: 7px;
  box-shadow: 0 1px 5px var(--create-note-shadow-color);
}
form.create-note input[type="text"],
form.create-note textarea {
  width: 100%;
  border: none;
  padding: 4px;
  outline: none;
  font-size: 1.2em;
  font-family: inherit;
  resize: none;

  background-color: var(--create-note-bg-color);
  color: var(--text-color);
}

form.create-note button {
  position: absolute;
  right: 18px;
  bottom: -18px;
  background: var(--primary-color);
  color: #fff;
  border: none;
  border-radius: 50%;
  width: 36px;
  height: 36px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
  cursor: pointer;
  outline: none;
}
form.create-note button:hover {
  background: var(--primary-muted-color);
  color: var(--primary-color);
}

@media screen and (max-width: 600px) {
  form.create-note {
    max-width: 100%;
  }
}

.centered-notes-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
}

.custom-textfield
  .MuiOutlinedInput-root.Mui-focused
  .MuiOutlinedInput-notchedOutline {
  border-color: #f5ba13; /* Custom outline color */
}

.custom-textfield .MuiInputLabel-root {
  color: #f5ba13; /* Custom label color */
}

.custom-textfield .MuiInputLabel-root.Mui-focused {
  color: #f5ba13; /* Custom label color when focused */
}

.checkbox-list-item .hover-icons {
  opacity: 0;
  transition: opacity 0.3s ease;
}

.checkbox-list-item:hover .hover-icons {
  opacity: 1;
}
.checkbox-list-item:focus-visible .hover-icons {
  opacity: 1;
}

.checkbox-list-item {
  border-top: 1px solid rgba(0, 0, 0, 0);
  border-bottom: 1px solid rgba(0, 0, 0, 0);
}
.checkbox-list-item:hover {
  border-top: 1px solid var(--light-gray);
  border-bottom: 1px solid var(--light-gray);
}

#create-note-fab {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: var(--primary-color);
}

/* Basic editor styles */
.tiptap {
  :first-child {
    margin-top: 0;
  }

  /* List styles */
  ul,
  ol {
    padding: 0 1rem;
    margin: 1.25rem 1rem 1.25rem 0.4rem;

    li p {
      margin-top: 0.25em;
      margin-bottom: 0.25em;
    }
  }

  /* Task list specific styles */
  ul[data-type="taskList"] {
    list-style: none;
    margin-left: 0;
    padding: 0;

    li {
      align-items: flex-start;
      display: flex;

      > label {
        flex: 0 0 auto;
        margin-right: 0.5rem;
        user-select: none;
      }

      > div {
        flex: 1 1 auto;
      }
    }

    input[type="checkbox"] {
      cursor: pointer;
    }

    ul[data-type="taskList"] {
      margin: 0;
    }
  }
}

input[type="checkbox"] {
  border: 2px solid red;
  background-color: transparent;
}
ul[data-type="taskList"] {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
ul[data-type="taskList"] div {
  display: inline-block;
  padding-left: 5px;
}

